<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Marca Consultas</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="titulo_login">Marca Consultas</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="lembrar_usuario">Lembrar usuário</string>
    <string name="entrar">Entrar</string>
    <string name="nome">Nome</string>
    <string name="data_hora">Data Hora</string>
    <string name="local">Local</string>
    <string name="medico">Medico</string>
    <string name="title_activity_activity_lista_consultas_marcadas">Consultas Marcadas</string>
    <string name="title_activity_activity_marcar_consultas">Marcar Consultas</string>
    <string name="marcar_consulta">Consultas Disponíveis</string>
    <string name="title_activity_activity_mostrar_mapa">Mostrar no Mapa</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="title_activity_activity_mapa">Mapa</string>
    <string name="mostrarNoMapa">Mostrar no mapa</string>
    <string name="desmarcarConsulta">Desmarcar consulta</string>
    <string name="consultas_marcadas">Consultas Marcadas</string>
    <string name="data">Data</string>
    <string name="especialidade">Especialidade</string>
    <string name="filtrar_por">Filtrar por:</string>
    <string name="selecione">Selecione uma opção abaixo</string>

</resources>
