<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/local"
        android:layout_marginLeft="10dp"
        android:id="@+id/txtLocal"
        android:textSize="@dimen/texto_grande"
        android:textColor="@android:color/black"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/medico"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/txtLocal"
        android:id="@+id/txtMedico"
        android:textSize="@dimen/texto_grande"
        android:textColor="@android:color/black"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/nome"
        android:layout_marginLeft="10dp"
        android:id="@+id/txtNome"
        android:layout_below="@id/txtLocal"
        android:textSize="@dimen/texto_pequeno"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/data_hora"
        android:layout_marginLeft="10dp"
        android:id="@+id/txtDataHora"
        android:layout_toRightOf="@id/txtNome"
        android:layout_below="@id/txtMedico"
        android:textSize="@dimen/texto_pequeno"
        android:textColor="@android:color/black"/>

</RelativeLayout>
