<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViewLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fillViewport="true">

    <RelativeLayout
        android:id="@+id/linLayoutLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal"
        tools:context="br.com.prova.marcaconsultas.ActivityLogin">

        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_login"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:textColor="@color/primary"
            android:layout_marginBottom="50dp"
            android:layout_above="@+id/linLayoutEdit"
            android:layout_centerHorizontal="true" />

        <LinearLayout
            android:id="@+id/linLayoutEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:text="@string/usuario"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/edtUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="text"
                android:shadowColor="#000000"
                android:text="admin" />

            <TextView
                android:id="@+id/TxtVwSenha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/senha"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/edtSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="textPassword"
                android:text="admin" />

            <CheckBox
                android:id="@+id/chkLembrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lembrar_usuario"
                android:textColor="@android:color/black"
                android:visibility="invisible" />

            <Button
                android:id="@+id/btnEntrar"
                android:layout_width="196dp"
                android:layout_height="70dp"
                android:layout_marginTop="16dp"
                android:text="@string/entrar"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:background="@color/primary" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>